--- a/public/partials/index.html
+++ b/public/partials/index.html
@@ -1,2 +1,8 @@
+
 <p> hello there </p>
 <sidebar></sidebar>
+<div id='mapbox'>
+
+</div>
+
+<script type='text/javascript-lazy' src='../d3/usmap.js'></script>
