--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,9 +8,12 @@ html
   body(ng-app='app')
     block content
 
-  script(src='https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.js')
-  script(src='https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0rc1/angular-route.js')
-
+  script(src='https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js')
+  script(src='https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0rc1/angular-route.min.js')
+  script(src='http://d3js.org/d3.v3.min.js' charset='utf-8')
+  script(src="http://d3js.org/queue.v1.min.js")
+  script(src='http://d3js.org/topojson.v1.min.js')
   script(src='js/directives.js')
   script(src='directives/js/sidebar.js')
+  script(src='directives/js/script.js')
   script(src='js/app.js')
